# swagger.json
@@ -4,9 +4,11 @@
     "title": "Balances and Transactions API",
     "description": "This API provides endpoints to get the current balance and a list of transactions.",
     "version": "1.0.0",
-    "servers": {
-      "url": "https://uh4goxppjc7stkg24d6fdma4t40wxtly.lambda-url.eu-central-1.on.aws"
-    }
+    "servers": [
+      {
+        "url": "https://uh4goxppjc7stkg24d6fdma4t40wxtly.lambda-url.eu-central-1.on.aws"
+      }
+    ]
   },
   "paths": {
     "/balances": {
@@ -98,6 +100,83 @@
           }
         }
       }
+    },
+    "/historical-balances": {
+      "get": {
+        "summary": "Get historical daily balances",
+        "description": "Retrieve historical daily balances within a specified date range.",
+        "security": [
+          {
+            "xApiKey": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "from",
+            "in": "query",
+            "description": "Start date for the historical data (YYYY-MM-DD)",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date"
+            }
+          },
+          {
+            "name": "to",
+            "in": "query",
+            "description": "End date for the historical data (YYYY-MM-DD)",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date"
+            }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "description": "Sort order for the results ( 'desc')",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": "desc"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "date": {
+                        "type": "string",
+                        "format": "date"
+                      },
+                      "amount": {
+                        "type": "number"
+                      },
+                      "currency": {
+                        "type": "string",
+                        "enum": ["EUR"]
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -110,3 +189,4 @@
     }
   }
 }
+
